--- a/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
@@ -1,17 +1,17 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: dashboard-svc
-  namespace: nginx-ingress
-spec:
-  ports:
-  - port: 80 
-    targetPort: 9000
-    protocol: TCP
-    name: dashboard
-  selector:
-    app: nginx-ingress
----
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: dashboard-svc
+#  namespace: nginx-ingress
+#spec:
+#  ports:
+#  - port: 80 
+#    targetPort: 9000
+#    protocol: TCP
+#    name: dashboard
+#  selector:
+#    app: nginx-ingress
+#---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
