--- a/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
@@ -1,17 +1,17 @@
 #apiVersion: v1
 #kind: Service
 #metadata:
-#  name: dashboard-svc
-#  namespace: nginx-ingress
-#spec:
-#  ports:
-#  - port: 80 
-#    targetPort: 9000
-#    protocol: TCP
-#    name: dashboard
-#  selector:
-#    app: nginx-ingress
-#---
+  name: dashboard-svc
+  namespace: nginx-ingress
+spec:
+  ports:
+  - port: 80 
+    targetPort: 9000
+    protocol: TCP
+    name: dashboard
+  selector:
+    app: nginx-ingress
+---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
@@ -29,7 +29,7 @@ spec:
       - path: /dashboard.html
         backend:
           serviceName:  dashboard-svc
-          servicePort: 9000
+          servicePort: 80
       - path: /api
         backend:
           serviceName:  dashboard-svc
