--- a/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
@@ -1,6 +1,6 @@
-#apiVersion: v1
-#kind: Service
-#metadata:
+apiVersion: v1
+kind: Service
+metadata:
   name: dashboard-svc
   namespace: nginx-ingress
 spec:
@@ -22,6 +22,10 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
 spec:
   # ingressClassName: nginx # use only with k8s version >= 1.18.0
+  tls:
+  - hosts:
+    - "nginx.{{local_domain}}"
+    secretName: default-server-secret
   rules:
   - host: "nginx.{{local_domain}}"
     http:
