nginx tls update

--- a/automation/roles/manage_nic_deployment/templates/nginx-server-secret.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-server-secret.j2
@@ -5,5 +5,5 @@ metadata:
   namespace: nginx-ingress
 type: kubernetes.io/tls
 data:
-  tls.crt: "{{nginx.tls.crt}}"
-  tls.key: "{{nginx.tls.key}}
+  tls.crt: "{{nginx_tls_crt}}"
+  tls.key: "{{nginx_tls_key}}
