nginx tls update

--- a/automation/roles/manage_nic_deployment/templates/nginx-server-secret.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-server-secret.j2
@@ -6,4 +6,4 @@ metadata:
 type: kubernetes.io/tls
 data:
   tls.crt: "{{nginx_tls_crt}}"
-  tls.key: "{{nginx_tls_key}}
+  tls.key: "{{nginx_tls_key}}"
