--- a/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
@@ -32,12 +32,16 @@ spec:
       paths:
       - path: /dashboard.html
         backend:
-          serviceName:  dashboard-svc
-          servicePort: 80
+          service:
+            name: dashboard-svc
+              port:
+                name: http
       - path: /api
         backend:
-          serviceName:  dashboard-svc
-          servicePort: 80
+          service:
+            name: dashboard-svc
+              port:
+                name: http
 ---
 apiVersion: "cis.f5.com/v1"
 kind: IngressLink
