--- a/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
@@ -19,7 +19,7 @@ metadata:
   namespace: nginx-ingress
   # use annotations with k8s version < 1.18.0
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    #kubernetes.io/ingress.class: "nginx"
 spec:
   ingressClassName: nginx # use only with k8s version >= 1.18.0
   tls:
