--- a/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
@@ -6,7 +6,7 @@ metadata:
 spec:
   ports:
   - port: 80 
-    targetPort: 8080
+    targetPort: 9000
     protocol: TCP
     name: dashboard
   selector:
@@ -19,9 +19,9 @@ metadata:
   namespace: nginx-ingress
   # use annotations with k8s version < 1.18.0
   annotations:
-    #kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: "nginx"
 spec:
-  ingressClassName: nginx # use only with k8s version >= 1.18.0
+  # ingressClassName: nginx # use only with k8s version >= 1.18.0
   tls:
   - hosts:
     - "nginx.{{local_domain}}"
@@ -49,7 +49,7 @@ apiVersion: "cis.f5.com/v1"
 kind: IngressLink
 metadata:
   name: vs-dashboard.ingresslink
-  namespace: nginx-ingress 
+  namespace: nginx-ingress
 spec:
   virtualServerAddress: "{{nginx_dashboard_address}}"
   host: "nginx.{{local_domain}}"
@@ -57,4 +57,4 @@ spec:
     - /Common/Shared/Proxy_Protocol_iRule
   selector:
     matchLabels:
-      app: ingresslink         
+      app: nginx-ingress          
