--- a/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
@@ -8,7 +8,7 @@ spec:
   - port: 80 
     targetPort: 9000
     protocol: TCP
-    name: dashboard
+    name: http
   selector:
     app: nginx-ingress
 ---
