--- a/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
@@ -17,6 +17,7 @@ kind: Ingress
 metadata:
   name: dashboard-ingress
   # use annotations with k8s version < 1.18.0
+  namespace: nginx-ingress
   annotations:
     #kubernetes.io/ingress.class: nginx
 spec:
