--- a/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
+++ b/automation/roles/manage_nic_deployment/templates/nginx-dashboard.j2
@@ -57,4 +57,4 @@ spec:
     - /Common/Shared/Proxy_Protocol_iRule
   selector:
     matchLabels:
-      app: nginx-ingress          
+      app: ingresslink         
