--- a/automation/roles/manage_cert_manager/templates/clusterissuer.j2
+++ b/automation/roles/manage_cert_manager/templates/clusterissuer.j2
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: lab.1broken.net
+  name: lab.test.local
   namespace: cert-manager
 spec:
   ca:
